tests/errors/scalar_function_arg_requires_cast.dang
import Test

# String! is not implicitly assignable to a custom scalar argument.
pub bad = fetchURL(url: "https://example.com")
